src/objects/Projects__c.object
<CustomObject>
    <description>Conservation projects</description>
    <fields>
        <fullName>Anticipated_Funding__c</fullName>
        <inlineHelpText>Total of funding allocated to this project, whether committed or expected.</inlineHelpText>
        <label>Anticipated Funding</label>
        <summarizedField>Project_Funding__c.Allocated_Amount__c</summarizedField>
        <summaryForeignKey>Project_Funding__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confirmed_Amount__c</fullName>
        <inlineHelpText>Funding Request is closed and won</inlineHelpText>
        <label>Confirmed Amount</label>
        <summarizedField>Project_Funding__c.Confirmed_Amount__c</summarizedField>
        <summaryForeignKey>Project_Funding__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country where the campaign site is located.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dashboard_Id__c</fullName>
        <description>Used to generate Cohort specific dashboard data</description>
        <inlineHelpText>Do not use - admin only</inlineHelpText>
        <label>Dashboard Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Targeted__c</fullName>
        <label>Funds Targeted</label>
        <summarizedField>Project_Funding__c.Non_Discounted_Amount__c</summarizedField>
        <summaryForeignKey>Project_Funding__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Display_Name__c</fullName>
        <formula>TEXT(Project_Group__c)  &amp; &quot; : $&quot; &amp;

IF (LEN(TEXT(Project_Target__c)) &gt; 6,
LEFT(
TEXT(Project_Target__c),
LEN(TEXT(Project_Target__c))-6
) &amp; &quot;,&quot;,
&quot;&quot;)
&amp;
LEFT(RIGHT(TEXT(Project_Target__c),6),3)
&amp;&quot;,&quot;&amp;
RIGHT( TEXT(Project_Target__c), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <label>Cohort/Project Group</label>
        <picklist>
            <controllingField>Program_Name__c</controllingField>
            <picklistValues>
                <fullName>Pride General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3 - Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 5 - Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Marine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Target__c</fullName>
        <label>Project Target</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <picklist>
            <controllingField>Project_Group__c</controllingField>
            <picklistValues>
                <fullName>BRAZIL - Brazil (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXMER - Esmeraldas (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIAPA - Chiapas (IAF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSTAR - Costa Rica (MD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GALAPA - Galapagos (GCF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIDALG - Hidalgo (IAF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NICARA - Nicaragua (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBORO - Amboro (TNC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELTOKI - El Tokio (TNC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JANOSP - Janos (ENC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAMIST - La Amistad (TNC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBARAC - Mbaracayu (TNC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OXAPA - Oxapampa (TNC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1 - Bogor Campaign #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR2 - Bogor Campaign #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSETUP - Bofor Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEDESA - Cederberg, SA (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMODO - Komodo (Packard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAOJUN - Sichuan (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALAWA - Palawan (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIERRA - Sierra Leone (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCSA - Succulent KAroo, SA (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPANG - Papua New Guinea (packard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILIP - Philippines (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMAT1 - Pakpak, Sumatra (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMAT2 - Acheja, Sumatra (CEPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GABONA - Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRENAD - Grenada - Kent V (USFWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAOWCS - Laos Wildlife Conservation Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POHNPE - Cons Society of Pohnpei</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_status__c</fullName>
        <label>Project status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_Pride_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relevant Pride Application</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Projects (Relevant Pride Application)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Project type defined by Finance.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Products and Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMaPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Anticipated_Funding__c -Project_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Projects</label>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Cohort__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_status__c</columns>
        <columns>Program_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_4</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Bogor 4</value>
        </filters>
        <label>Bogor 4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_5</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Bogor 5</value>
        </filters>
        <label>Bogor 5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_6</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>equals</operation>
            <value>Bogor 6</value>
        </filters>
        <label>Bogor 6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_1</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>equals</operation>
            <value>Brazil 1</value>
        </filters>
        <label>Brazil 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_1</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>China 1</value>
        </filters>
        <label>China 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_2</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>China 2</value>
        </filters>
        <label>China 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Guad_10</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Guad 10</value>
        </filters>
        <label>Guad 10</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Guad_7_projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Guad 7</value>
        </filters>
        <label>Guad 7</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Guad_8_projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Guad 8</value>
        </filters>
        <label>Guad 8</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Guad_9</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Guad 9</value>
        </filters>
        <label>Guad 9</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PEP_1</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>PEP 1</value>
        </filters>
        <label>PEP 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PEP_2</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>PEP 2</value>
        </filters>
        <label>PEP 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PEP_3</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>PEP 3 - Micronesia</value>
        </filters>
        <label>PEP 3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Phili_2</fullName>
        <columns>NAME</columns>
        <columns>Project_Target__c</columns>
        <columns>Lead_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Group__c</field>
            <operation>equals</operation>
            <value>Phili 2</value>
        </filters>
        <label>Phili 2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>